Fixing responsiveness on mobile phone

--- a/src/components/Pages/Dashboard/SIdebar/Sidebar.css
+++ b/src/components/Pages/Dashboard/SIdebar/Sidebar.css
@@ -99,3 +99,35 @@
     display: none;
   }
 }
+
+@media screen and (max-width: 400px) {
+  .main-categories {
+    border-radius: 0;
+    padding: 0;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+  }
+
+  .profile {
+    background: #ff7500;
+    font-size: 120%;
+    padding: 10px 0 0 0;
+    width: 100%;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .links {
+    width: 100%;
+    padding: 20px;
+    display: flex;
+
+    flex-direction: row;
+    justify-content: space-between;
+  }
+  .links .fas {
+    display: none;
+  }
+}
